Rebase and unit tests.
Signed-off-by: Filip Drobnjakovic <drobnjakovicfilip@gmail.com>